# job-buddy

./: .env.example  .gitignore  .worktreeinclude  FINDINGS.md  HANDOVER.md  JobBuddy.ipynb  NEXT_SESSION.md  README.md  RESEARCH.md  calibrate_budgets.py  deepseek_client.py  deepseek_common.py  job_schema.py  job_store.py  model_config.py  models.json  net.py  pipeline.py  pyproject.toml  requirements.txt  run_config.json  scoring.py  slice1.py  source_mcf.py  test_deepseek.py  test_pipeline.py  test_scrapers.py  token_budget.py  update_models.py  user_input.py
.github/workflows/: tests.yml  watch-deepseek-docs.yml
config/: ats_boards.json  companies.json  skill_vocab.json  task_profiles.json
src/jobbuddy/: __init__.py  ab_harness.py  career_paths.py  cli.py  company_registry.py  experiment.py  fact_guard.py  fetcher.py  hr_panel.py  html_text.py  import_resume.py  job_schema.py  job_store.py  net.py  paths.py  pipeline.py  quota.py  render_career.py  render_charts.py  (+19 more)
tests/: __init__.py  mutate.py  test_ab_harness.py  test_audit_regressions.py  test_career_paths.py  test_deepseek.py  test_deferred_audit_items.py  test_experiment.py  test_fact_guard.py  test_fuzz.py  test_hr_panel.py  test_invariants.py  test_paths.py  test_pipeline.py  test_profile_import.py  test_reach.py  test_render_charts.py  test_render_excel.py  test_render_report.py  test_render_resume.py  test_resume_rules.py  test_scrapers.py  test_seams.py  test_silent_failures.py  test_skill_noise.py  test_sources.py  test_strategies.py  test_tailor.py  test_tailor_pipeline.py  test_token_budget.py
(+8 files in other folders)
